# Buckets

./: .gitignore  mkdocs.yml  pyproject.toml
data/: README.md
docs/: index.md
src/buckets/: __init__.py  buck.py  buckets.py  column_types.py  report_html.py  statitics.py  test_raport.py  tests.py  tree.py  var_report.py
tests/: test_bucket.py
